# smart_access_door

./: CMakeLists.txt  README.md  cloud_server.py  mosquitto_auth.conf  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  alarm.c  alarm.h  app_config.h  auth.c  auth.h  camera_http_server.c  camera_http_server.h  camera_ov2640.c  camera_ov2640.h  event_log.c  event_log.h  face_auth_adapter.c  face_auth_adapter.h  face_model_data.cc  face_model_data.h  fingerprint_as608.c  fingerprint_as608.h  idf_component.yml  keypad.c  keypad.h  local_record_db.c  local_record_db.h  lock_ctrl.c  lock_ctrl.h  main.c  mqtt_client_app.c  mqtt_client_app.h  power_manager.c  power_manager.h  rfid_mfrc522.c  rfid_mfrc522.h  tflm_face_recognition.cpp  tflm_face_recognition.h  time_sync.c  time_sync.h  ui_oled.c  ui_oled.h  user_db.c  user_db.h  (+2 more)
